--- a/src/style/Tip.css
+++ b/src/style/Tip.css
@@ -14,11 +14,12 @@
   border: 1px solid #e8e8e8;
   border-radius: 4px;
   box-shadow: 0 2px 4px rgba(37, 40, 43, 0.2);
+  color: black;
 }
 
 .Tip__card textarea {
   font-size: 16px;
-  width: 200px;
+  width: 250px;
   height: 70px;
 }
 
