Added pdf choice buttons to sidebar. Fixed double loading bug in PdfLoader.tsx.

--- a/example/src/style/App.css
+++ b/example/src/style/App.css
@@ -47,6 +47,10 @@ body {
   background: rgba(58, 56, 52, 0.08);
 }
 
+.sidebar__button-section {
+  padding: 1rem 0;
+}
+
 a {
   color: #d35400;
 }
@@ -54,7 +58,7 @@ a {
 blockquote {
   padding: 0;
   margin: 0;
-  quotes: "\201c" "\201d";
+  quotes: "\201c""\201d";
 }
 blockquote:before {
   content: open-quote;
